--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     Contact</h1>
                 <h5 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae8"
                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                    class="max-width-20rem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+                    class="max-width-20rem">Contact Us.</h5>
             </div>
             <div class="space-4rem"></div>
         </div>
