--- a/policy.html
+++ b/policy.html
@@ -9,8 +9,7 @@
 <body data-new-gr-c-s-check-loaded="14.1228.0" data-gr-ext-installed="">
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         data-w-id="06ab6c64-468c-b44e-1b8c-856deb96ba7f" role="banner" data-no-scroll="1" data-duration="400"
-        data-doc-height="1" style="opacity: 1;"><a href="index.html" class="logo-link-wrapper w-nav-brand"
-            aria-label="home">
+        data-doc-height="1" style="opacity: 1;"><a href="/" class="logo-link-wrapper w-nav-brand" aria-label="home">
             <img width="Auto" height="Auto" alt="Logo" src="images/logo1.png" loading="eager"
                 srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a>
@@ -26,8 +25,8 @@
                         style="max-width: 940px;">services</a><a href=""
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">services</a></div>
                 <!-- <div class="nav-link-wrapper"><a href="/blog" class="nav-link w-nav-link"
-                        style="max-width: 940px;">Blog</a><a href="/blog"
-                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
+                                        style="max-width: 940px;">Blog</a><a href="/blog"
+                                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
                 <div class="nav-link-wrapper"><a href="/contact.html" aria-current="page"
                         class="nav-link w-nav-link w--current" style="max-width: 940px;">Contact</a><a
                         href="/contact.html" aria-current="page"
@@ -44,58 +43,89 @@
     <section class="section">
         <div class="w-layout-blockcontainer container w-container">
             <div class="space-page-top"></div>
-            <div class="about-block">
-                <div data-w-id="55686b65-573b-6b1e-27a8-356f0a4302e2" class="subheading-flex" style="opacity: 1;">
-                    <div class="icon-wrapper"><img width="Auto" height="Auto" alt=""
-                            src="https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae492_svg_jcpq.svg"
-                            loading="eager" class="icon"></div>
-                    <h5>Get in touch</h5>
-                </div>
-                <h1 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae6"
-                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                    Contact</h1>
-                <h5 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae8"
-                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                    class="max-width-20rem">Get in touch with us for custom software solutions, website development, and
-                    mobile app innovation.</h5>
+            <div class="utitlities-title-wrapper fade-in-animation" style="opacity: 1;">
+                <h2>Privacy Policy</h2>
+                <p class="max-width-30rem">At Orbital Code, we are committed to protecting the privacy and security of
+                    our
+                    users' personal data.<br><br>This Privacy Policy outlines the types of information we collect, how
+                    we
+                    use this information, and the choices you have regarding your personal data.<br><br>By using our
+                    software
+                    development services, you consent to the collection and use of your data in accordance with this
+                    policy.</p>
+                <div class="space-1rem"></div>
             </div>
-            <div class="space-4rem"></div>
+            <div class="space-2rem"></div>
+            <div class="utilities-rtb-wrapper fade-in-animation" style="opacity: 1;">
+                <div class="max-width-38rem w-richtext">
+                    <h4>1. Collection of Information<br>‍</h4>
+                    <ul role="list">
+                        <li><strong>Personal Information:</strong> When you contact us or use our services, we may
+                            collect
+                            your name, email address, phone number, company details, and other relevant information.
+                        </li>
+                        <li><strong>Project Information:</strong> We may collect details related to your software
+                            development requirements, project specifications, and other relevant business details.</li>
+                        <li><strong>Usage Data:</strong> Information such as IP address, browser type, operating system,
+                            and
+                            usage behavior may be collected to improve our website and services.</li>
+                    </ul>
+                    <p>‍<br>‍</p>
+                    <h4>2. Use of Information<br>‍</h4>
+                    <ul role="list">
+                        <li><strong>Providing Services:</strong> Your information helps us develop, customize, and
+                            deliver
+                            high-quality software solutions.</li>
+                        <li><strong>Communication:</strong> We use your contact details to respond to inquiries, provide
+                            project updates, and share important service-related information.</li>
+                        <li><strong>Security & Improvement:</strong> Data analytics help us enhance our services,
+                            website
+                            performance, and security measures.</li>
+                        <li><strong>Marketing & Updates:</strong> We may send newsletters, service updates, and
+                            promotional
+                            materials, but you can opt out at any time.</li>
+                    </ul>
+                    <p><br>‍</p>
+                    <h4>3. Information Sharing<br>‍</h4>
+                    <ul role="list">
+                        <li><strong>With Clients:</strong> If you collaborate with us on a project, necessary details
+                            may be
+                            shared to facilitate smooth execution.</li>
+                        <li><strong>Service Providers:</strong> We may work with trusted third-party tools and platforms
+                            to
+                            ensure efficient service delivery.</li>
+                        <li><strong>Legal Compliance:</strong> If required by law, we may disclose information to comply
+                            with legal obligations or respond to government requests.</li>
+                    </ul>
+                    <p><br>‍</p>
+                    <h4>4. Data Security<br>‍</h4>
+                    <p>We implement industry-standard security practices to protect your data from unauthorized access,
+                        misuse, or disclosure. However, no online transmission is entirely secure, and users should take
+                        necessary precautions when sharing information.</p>
+                    <p>‍</p>
+                    <h4>5. Your Rights<br>‍</h4>
+                    <p>You have the right to access, modify, or delete your personal data. You can also opt out of
+                        receiving marketing communications at any time. For any privacy-related concerns, please contact
+                        us.</p>
+                    <p>‍</p>
+                    <p>‍</p>
+                    <h4>6. Third-Party Websites<br>‍</h4>
+                    <p>Our website may contain links to external platforms. We do not control or take responsibility for
+                        the privacy policies of third-party websites, and we encourage users to review their policies
+                        before
+                        engaging with them.</p>
+                    <p>‍</p>
+                    <h4>7. Changes to this Privacy Policy<br>‍</h4>
+                    <p>Orbital Code reserves the right to update this Privacy Policy as needed to reflect changes in
+                        services, legal requirements, or industry standards. Any significant changes will be
+                        communicated
+                        through our website.</p>
+                    <h4>‍</h4>
+                </div>
+            </div>
+            <div class="space-2rem"></div>
         </div>
     </section>
-    <section class="section">
-        <div class="w-layout-blockcontainer container w-container">
-            <div class="form-wrapper slide-up-animation w-form"
-                style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get"
-                    data-wf-page-id="6706104d4f29e916e4cae2ff" data-wf-element-id="de33c4bd-5db8-0dd9-da14-921ce98adbf8"
-                    aria-label="Email Form">
-                    <div class="field-wrapper"><label for="name" class="field-label">Name</label><input
-                            class="text-field w-input" maxlength="256" name="name-3" data-name="Name 3"
-                            placeholder="e. g. John Doe" type="text" id="name-3"></div>
-                    <div class="field-wrapper"><label for="email" class="field-label">Email Address</label><input
-                            class="text-field w-input" maxlength="256" name="email-3" data-name="Email 3"
-                            placeholder="e. g. johndoe@email.com" type="email" id="email-3" required=""></div>
-                    <div class="field-wrapper"><label for="Phone" class="field-label">Phone Number</label><input
-                            class="text-field w-input" maxlength="256" name="Phone" data-name="Phone"
-                            placeholder="(123) - 456 - 789" type="tel" id="Phone"></div>
-                    <div class="field-wrapper"><label for="Message" class="field-label">Your Message</label><textarea
-                            id="Message" name="Message" maxlength="5000" data-name="Message"
-                            placeholder="Write Your Message Here" required="" class="message-area w-input"></textarea>
-                    </div><input type="submit" data-wait="Please wait..." class="button w-button" value="Send Message">
-                </form>
-                <div class="contact-success-message w-form-done" tabindex="-1" role="region"
-                    aria-label="Email Form success">
-                    <div>Thank you! Your submission has been received!</div>
-                </div>
-                <div class="contact-error-message w-form-fail" tabindex="-1" role="region"
-                    aria-label="Email Form failure">
-                    <div>Oops! Something went wrong while submitting the form.</div>
-                </div>
-            </div>
-            <div class="space-7rem"></div>
-        </div>
-    </section>
-    <div class="space-7rem"></div>
     <section class="section background-primary">
         <div class="w-layout-blockcontainer container padding-4-5rem w-container">
             <div class="space-2rem"></div>
