--- a/termsCondition.html
+++ b/termsCondition.html
@@ -3,14 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="./styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
+
 
 <body data-new-gr-c-s-check-loaded="14.1228.0" data-gr-ext-installed="">
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         data-w-id="06ab6c64-468c-b44e-1b8c-856deb96ba7f" role="banner" data-no-scroll="1" data-duration="400"
-        data-doc-height="1" style="opacity: 1;"><a href="index.html" class="logo-link-wrapper w-nav-brand"
-            aria-label="home">
+        data-doc-height="1" style="opacity: 1;"><a href="/" class="logo-link-wrapper w-nav-brand" aria-label="home">
             <img width="Auto" height="Auto" alt="Logo" src="images/logo1.png" loading="eager"
                 srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a>
@@ -26,8 +25,8 @@
                         style="max-width: 940px;">services</a><a href=""
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">services</a></div>
                 <!-- <div class="nav-link-wrapper"><a href="/blog" class="nav-link w-nav-link"
-                        style="max-width: 940px;">Blog</a><a href="/blog"
-                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
+                                style="max-width: 940px;">Blog</a><a href="/blog"
+                                class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
                 <div class="nav-link-wrapper"><a href="/contact.html" aria-current="page"
                         class="nav-link w-nav-link w--current" style="max-width: 940px;">Contact</a><a
                         href="/contact.html" aria-current="page"
@@ -44,58 +43,79 @@
     <section class="section">
         <div class="w-layout-blockcontainer container w-container">
             <div class="space-page-top"></div>
-            <div class="about-block">
-                <div data-w-id="55686b65-573b-6b1e-27a8-356f0a4302e2" class="subheading-flex" style="opacity: 1;">
-                    <div class="icon-wrapper"><img width="Auto" height="Auto" alt=""
-                            src="https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae492_svg_jcpq.svg"
-                            loading="eager" class="icon"></div>
-                    <h5>Get in touch</h5>
-                </div>
-                <h1 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae6"
-                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                    Contact</h1>
-                <h5 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae8"
-                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                    class="max-width-20rem">Get in touch with us for custom software solutions, website development, and
-                    mobile app innovation.</h5>
+            <div class="utitlities-title-wrapper fade-in-animation" style="opacity: 1;">
+                <h2>Terms &amp; Conditions</h2>
+                <p class="max-width-30rem">Please review these Terms and Conditions carefully before using our software
+                    development services.<br><br>By accessing or using our services, you agree to be bound by these
+                    Terms and Conditions.<br><br>If you do not agree with any part of these Terms and Conditions, please
+                    refrain from using our services.</p>
+                <div class="space-1rem"></div>
             </div>
-            <div class="space-4rem"></div>
+            <div class="space-2rem"></div>
+            <div class="utilities-rtb-wrapper fade-in-animation" style="opacity: 1;">
+                <div class="max-width-38rem w-richtext">
+                    <h4>1. Intellectual Property<br>‍</h4>
+                    <p>All content, including text, graphics, code, and design elements, is the intellectual property of
+                        <b> Orbital Code</b>. You may not modify, reproduce, distribute, or use any part of our website
+                        designs
+                        without prior written consent.
+                    </p>
+                    <p>‍</p>
+                    <h4>2. Use of Our Services<br>‍</h4>
+                    <p>YBy engaging with our website development services, you are granted a non-exclusive,
+                        non-transferable license to use the website we develop for you. Reselling, sublicensing, or
+                        redistributing our designs without explicit written permission from <b> Orbital Code</b> is
+                        strictly
+                        prohibited.</p>
+                    <p>‍</p>
+                    <h4>3. Client Content<br><br></h4>
+                    <p>You are responsible for providing accurate and lawful content, including text, images, and data,
+                        for your website. By submitting content to us, you grant <b> Orbital Code</b> a non-exclusive,
+                        global
+                        license to use it for website development purposes.</p>
+                    <p>‍</p>
+                    <h4>4. Prohibited Activities<br>‍</h4>
+                    <p>While using our website development services, you agree to refrain from:</p>
+                    <p>‍</p>
+                    <ul role="list">
+                        <li>Uploading or requesting content that violates copyright laws.</li>
+                        <li>Using the website for unlawful, deceptive, or harmful activities.</li>
+                        <li>Attempting unauthorized modifications or reverse engineering of our provided solutions.
+                        </li>
+                        <li>Introducing malware, viruses, or malicious scripts that could compromise security.</li>
+                    </ul>
+                    <p>‍</p>
+                    <p>‍</p>
+                    <h4>5. Limitation of Liability<br>‍</h4>
+                    <p>We strive to deliver high-quality websites with optimized functionality. However, <b> Orbital
+                            Code</b> is
+                        not liable for any data loss, security breaches, or business losses that may result from website
+                        usage or third-party integrations.</p>
+                    <p>‍</p>
+                    <h4>6. Third-Party Links<br>‍</h4>
+                    <p>Your website may include third-party APIs, plugins, or services (such as payment gateways or
+                        analytics tools). We do not control or endorse their policies, and you assume responsibility for
+                        compliance with their terms.</p>
+                    <p>‍</p>
+                    <h4>7. Termination<br>‍</h4>
+                    <p>We reserve the right to suspend or terminate services in cases of contract violations,
+                        non-payment, or misuse of the website. Upon termination, you must discontinue the use of any
+                        proprietary materials provided by<b>Orbital Code</b>.</p>
+                    <p>‍</p>
+                    <h4>8. Governing Law<br>‍</h4>
+                    <p>These Terms & Conditions are governed by the laws of <b>India</b>. Any legal disputes arising
+                        from our
+                        website development services will be settled in the courts of <b>Chennai, Tamil Nadu</b>.</p>
+                    <p>‍</p>
+                    <h4>9. Modifications<br>‍</h4>
+                    <p>We may update these Terms & Conditions at any time. Continued use of our website development
+                        services constitutes your agreement to the latest version of these terms.</p>
+                    <h2>‍</h2>
+                </div>
+            </div>
+            <div class="space-2rem"></div>
         </div>
     </section>
-    <section class="section">
-        <div class="w-layout-blockcontainer container w-container">
-            <div class="form-wrapper slide-up-animation w-form"
-                style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get"
-                    data-wf-page-id="6706104d4f29e916e4cae2ff" data-wf-element-id="de33c4bd-5db8-0dd9-da14-921ce98adbf8"
-                    aria-label="Email Form">
-                    <div class="field-wrapper"><label for="name" class="field-label">Name</label><input
-                            class="text-field w-input" maxlength="256" name="name-3" data-name="Name 3"
-                            placeholder="e. g. John Doe" type="text" id="name-3"></div>
-                    <div class="field-wrapper"><label for="email" class="field-label">Email Address</label><input
-                            class="text-field w-input" maxlength="256" name="email-3" data-name="Email 3"
-                            placeholder="e. g. johndoe@email.com" type="email" id="email-3" required=""></div>
-                    <div class="field-wrapper"><label for="Phone" class="field-label">Phone Number</label><input
-                            class="text-field w-input" maxlength="256" name="Phone" data-name="Phone"
-                            placeholder="(123) - 456 - 789" type="tel" id="Phone"></div>
-                    <div class="field-wrapper"><label for="Message" class="field-label">Your Message</label><textarea
-                            id="Message" name="Message" maxlength="5000" data-name="Message"
-                            placeholder="Write Your Message Here" required="" class="message-area w-input"></textarea>
-                    </div><input type="submit" data-wait="Please wait..." class="button w-button" value="Send Message">
-                </form>
-                <div class="contact-success-message w-form-done" tabindex="-1" role="region"
-                    aria-label="Email Form success">
-                    <div>Thank you! Your submission has been received!</div>
-                </div>
-                <div class="contact-error-message w-form-fail" tabindex="-1" role="region"
-                    aria-label="Email Form failure">
-                    <div>Oops! Something went wrong while submitting the form.</div>
-                </div>
-            </div>
-            <div class="space-7rem"></div>
-        </div>
-    </section>
-    <div class="space-7rem"></div>
     <section class="section background-primary">
         <div class="w-layout-blockcontainer container padding-4-5rem w-container">
             <div class="space-2rem"></div>
