--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         data-w-id="06ab6c64-468c-b44e-1b8c-856deb96ba7f" role="banner" data-no-scroll="1" data-duration="400"
-        data-doc-height="1" style="opacity: 1;"><a href="/" aria-current="page"
+        data-doc-height="1" style="opacity: 1;"><a href="index.html" aria-current="page"
             class="logo-link-wrapper w-nav-brand w--current" aria-label="home">
             <img width="Auto" height="Auto" alt="Logo" src="images/logo1.png" loading="eager"
                 srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
@@ -22,9 +22,9 @@
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a> -->
         <div class="nav-container w-container">
             <nav role="navigation" class="nav-menu w-nav-menu">
-                <div class="nav-link-wrapper"><a href="" aria-current="page" class="nav-link w-nav-link w--current"
+                <div class="nav-link-wrapper"><a href="index.html" aria-current="page" class="nav-link w-nav-link w--current"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">Home</a><a
-                        href="" aria-current="page" class="nav-link move-down hide-on-tab w-nav-link w--current"
+                        href="index.html" aria-current="page" class="nav-link move-down hide-on-tab w-nav-link w--current"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">Home</a>
                 </div>
                 <div class="nav-link-wrapper"><a href="" class="nav-link w-nav-link"
@@ -101,7 +101,7 @@
                         src="https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae463_Img-2.webp"
                         loading="eager" class="features-image"> -->
                     <img sizes="(max-width: 479px) 80vw, (max-width: 991px) 312px, 22vw"
-                        srcset="images/website.webp 500w, images/website.webp 800w, https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae463_Img-2.webp 961w"
+                        srcset="images/website.webp 500w, images/website.webp 800w, images/website.webp 961w"
                         alt="accent chair" src="images/website.webp" loading="eager" class="features-image">
                     <div class="pop-up-card top-right background-blur">
                         <h4>2X</h4>
@@ -937,13 +937,13 @@
                                 class="social-icon smaller"></a></div>
                     <p class="max-width-17vw">Innovative Solutions, Seamless Experiences,Cutting-Edge Innovation, Smooth
                         Execution.</p>
-                        
+
                 </div>
                 <div class="footer-right-flex">
                     <div class="footer-wrapper">
                         <h5>Main</h5>
-                        <div class="footer-link-wrapper"><a href="" aria-current="page"
-                                class="footer-link w--current">Home</a><a href="" aria-current="page"
+                        <div class="footer-link-wrapper"><a href="index.html" aria-current="page"
+                                class="footer-link w--current">Home</a><a href="index.html" aria-current="page"
                                 class="footer-link move-down w--current">Home</a></div>
                         <div class="footer-link-wrapper"><a href="" class="footer-link">About</a><a href=""
                                 class="footer-link move-down">About</a></div>
@@ -954,13 +954,13 @@
                     </div>
                     <div class="footer-wrapper">
                         <h5>Pages</h5>
-                        <div class="footer-link-wrapper"><a href="/contact.html" class="footer-link">Contact</a><a href="/contact.html"
-                                class="footer-link move-down">Contact</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">Terms &amp;
-                                Conditions</a><a href="" class="footer-link move-down">Terms &amp;
+                        <div class="footer-link-wrapper"><a href="/contact.html" class="footer-link">Contact</a><a
+                                href="/contact.html" class="footer-link move-down">Contact</a></div>
+                        <div class="footer-link-wrapper"><a href="/termsCondition.html" class="footer-link">Terms &amp;
+                                Conditions</a><a href="./termsCondition.html" class="footer-link move-down">Terms &amp;
                                 Conditions</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">Privacy
-                                Policy</a><a href="" class="footer-link move-down">Privacy Policy</a>
+                        <div class="footer-link-wrapper"><a href="/policy.html" class="footer-link">Privacy
+                                Policy</a><a href="/policy.html" class="footer-link move-down">Privacy Policy</a>
                         </div>
                     </div>
                     <!-- <div class="footer-wrapper">
@@ -1004,9 +1004,8 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6706104d4f29e916e4cae2ad"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="file.js"
-        type="text/javascript"></script><bookmark-sidebar-kbr84zdcf9c id="redeviation-bs-sidebar" class="notranslate"
-        aria-hidden="true" data-theme="default" data-pos="left"></bookmark-sidebar-kbr84zdcf9c>
+    <script src="file.js" type="text/javascript"></script><bookmark-sidebar-kbr84zdcf9c id="redeviation-bs-sidebar"
+        class="notranslate" aria-hidden="true" data-theme="default" data-pos="left"></bookmark-sidebar-kbr84zdcf9c>
     <div id="redeviation-bs-indicator" data-theme="default" class="redeviation-bs-fullHeight redeviation-bs-visible"
         data-pos="left" style="height: 100%; top: 0%;">
         <div><span></span></div>
