--- a/service.html
+++ b/service.html
@@ -3,14 +3,12 @@
 
 <head>
     <link rel="stylesheet" href="./styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1228.0" data-gr-ext-installed="">
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         data-w-id="06ab6c64-468c-b44e-1b8c-856deb96ba7f" role="banner" data-no-scroll="1" data-duration="400"
-        data-doc-height="1" style="opacity: 1;"><a href="index.html" class="logo-link-wrapper w-nav-brand"
-            aria-label="home">
+        data-doc-height="1" style="opacity: 1;"><a href="/index.html" class="logo-link-wrapper w-nav-brand" aria-label="home">
             <img width="Auto" height="Auto" alt="Logo" src="images/logo1.png" loading="eager"
                 srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a>
@@ -20,14 +18,14 @@
                         style="max-width: 940px;">Home</a><a href="index.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Home</a></div>
                 <div class="nav-link-wrapper"><a href="/about.html" class="nav-link w-nav-link"
-                        style="max-width: 940px;">About</a><a href="/about.html" class="nav-link move-down hide-on-tab w-nav-link"
-                        style="max-width: 940px;">About</a></div>
+                        style="max-width: 940px;">About</a><a href="/about.html"
+                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">About</a></div>
                 <div class="nav-link-wrapper"><a href="/service.html" class="nav-link w-nav-link"
                         style="max-width: 940px;">services</a><a href="/service.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">services</a></div>
                 <!-- <div class="nav-link-wrapper"><a href="/blog" class="nav-link w-nav-link"
-                        style="max-width: 940px;">Blog</a><a href="/blog"
-                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
+                                        style="max-width: 940px;">Blog</a><a href="/blog"
+                                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Blog</a></div> -->
                 <div class="nav-link-wrapper"><a href="/contact.html" aria-current="page"
                         class="nav-link w-nav-link w--current" style="max-width: 940px;">Contact</a><a
                         href="/contact.html" aria-current="page"
@@ -42,60 +40,74 @@
         <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
     </div>
     <section class="section">
+        <div class="space-page-top"></div>
         <div class="w-layout-blockcontainer container w-container">
-            <div class="space-page-top"></div>
             <div class="about-block">
-                <div data-w-id="55686b65-573b-6b1e-27a8-356f0a4302e2" class="subheading-flex" style="opacity: 1;">
-                    <div class="icon-wrapper"><img width="Auto" height="Auto" alt=""
-                            src="https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae492_svg_jcpq.svg"
-                            loading="eager" class="icon"></div>
-                    <h5>Get in touch</h5>
-                </div>
-                <h1 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae6"
+                <div class="text-block slide-from-left-animation"
                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                    Contact</h1>
-                <h5 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae8"
+                    <div data-w-id="55686b65-573b-6b1e-27a8-356f0a4302e2" class="subheading-flex" style="opacity: 1;">
+                        <div class="icon-wrapper"><img width="Auto" height="Auto" alt=""
+                                src="https://cdn.prod.website-files.com/6706104d4f29e916e4cae2ad/6706104d4f29e916e4cae48e_svg_YgBd.svg"
+                                loading="eager" class="icon"></div>
+                        <h5>Innovative Solutions</h5>
+                    </div>
+                    <h1>Services</h1>
+                </div>
+                <h5 data-w-id="cd887da8-8603-0243-dc11-c5bb2ebc0096"
                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                    class="max-width-20rem">Get in touch with us for custom software solutions, website development, and
-                    mobile app innovation.</h5>
+                    class="max-width-20rem">High-quality software development solutions for businesses and startups.</h5>
             </div>
-            <div class="space-4rem"></div>
         </div>
+        <div class="space-7rem"></div>
     </section>
     <section class="section">
-        <div class="w-layout-blockcontainer container w-container">
-            <div class="form-wrapper slide-up-animation w-form"
-                style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get"
-                    data-wf-page-id="6706104d4f29e916e4cae2ff" data-wf-element-id="de33c4bd-5db8-0dd9-da14-921ce98adbf8"
-                    aria-label="Email Form">
-                    <div class="field-wrapper"><label for="name" class="field-label">Name</label><input
-                            class="text-field w-input" maxlength="256" name="name-3" data-name="Name 3"
-                            placeholder="e. g. John Doe" type="text" id="name-3"></div>
-                    <div class="field-wrapper"><label for="email" class="field-label">Email Address</label><input
-                            class="text-field w-input" maxlength="256" name="email-3" data-name="Email 3"
-                            placeholder="e. g. johndoe@email.com" type="email" id="email-3" required=""></div>
-                    <div class="field-wrapper"><label for="Phone" class="field-label">Phone Number</label><input
-                            class="text-field w-input" maxlength="256" name="Phone" data-name="Phone"
-                            placeholder="(123) - 456 - 789" type="tel" id="Phone"></div>
-                    <div class="field-wrapper"><label for="Message" class="field-label">Your Message</label><textarea
-                            id="Message" name="Message" maxlength="5000" data-name="Message"
-                            placeholder="Write Your Message Here" required="" class="message-area w-input"></textarea>
-                    </div><input type="submit" data-wait="Please wait..." class="button w-button" value="Send Message">
-                </form>
-                <div class="contact-success-message w-form-done" tabindex="-1" role="region"
-                    aria-label="Email Form success">
-                    <div>Thank you! Your submission has been received!</div>
+        <div class="w-layout-blockcontainer container padding-9rem overflow w-container">
+            <div class="services-flex">
+                <div data-w-id="0c9c6368-ada0-a0c3-97e6-e791ea71f0c5"
+                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                    class="services-left">
+                    <h6>We Build the Future</h6>
+                    <h3>Expert Software Solutions</h3>
+                    <p class="max-width-58rem">We specialize in delivering cutting-edge software solutions tailored to
+                        your needs. Our team of experienced developers ensures high-quality, scalable, and efficient
+                        software for businesses of all sizes.</p>
+                    <div class="space-0-5rem"></div><a href="#about" data-w-id="3beb919a-4aaa-f885-16a0-1c9b6601a3ec"
+                        class="button-with-circle-icon button-light w-inline-block">
+                        <p class="button-text">Explore</p>
+                        <p class="button-text move-down hide-on-tab">Explore</p>
+                        <div class="circle-absolute"
+                            style="transform: translate3d(0px, 3.33vw, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                        </div>
+                    </a>
                 </div>
-                <div class="contact-error-message w-form-fail" tabindex="-1" role="region"
-                    aria-label="Email Form failure">
-                    <div>Oops! Something went wrong while submitting the form.</div>
+                <div data-w-id="0c9c6368-ada0-a0c3-97e6-e791ea71f0d4"
+                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                    class="services-right">
+                    <div class="services-block background-blur">
+                        <h5>Custom</h5>
+                        <h4>Web Development</h4>
+                        <p>We create responsive, high-performance websites that deliver seamless user experiences and
+                            drive business growth.</p>
+                    </div>
+                    <div class="services-block background-blur">
+                        <h5>Seamless Experience</h5>
+                        <h4>Mobile App Development</h4>
+                        <p>We design and develop user-friendly mobile apps with intuitive interfaces for both iOS and
+                            Android platforms.</p>
+                    </div>
+                    <div class="services-block background-blur">
+                        <h5>Scalable</h5>
+                        <h4>Cloud Solutions</h4>
+                        <p>ur cloud-based solutions provide security, scalability, and flexibility to support your
+                            digital transformation. </p>
+                    </div>
                 </div>
             </div>
             <div class="space-7rem"></div>
         </div>
+        <div class="wave"></div>
     </section>
-    <div class="space-7rem"></div>
+
     <section class="section background-primary">
         <div class="w-layout-blockcontainer container padding-4-5rem w-container">
             <div class="space-2rem"></div>
@@ -136,10 +148,10 @@
                         <div class="footer-link-wrapper"><a href="index.html" aria-current="page"
                                 class="footer-link w--current">Home</a><a href="index.html" aria-current="page"
                                 class="footer-link move-down w--current">Home</a></div>
-                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a href="/about.html"
-                                class="footer-link move-down">About</a></div>
-                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a href="/service.html"
-                                class="footer-link move-down">Services</a></div>
+                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a
+                                href="/about.html" class="footer-link move-down">About</a></div>
+                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a
+                                href="/service.html" class="footer-link move-down">Services</a></div>
                         <!-- <div class="footer-link-wrapper"><a href="/blog" class="footer-link">Blog</a><a href="/blog"
                                 class="footer-link move-down">Blog</a></div> -->
                     </div>
