--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a> -->
         <div class="nav-container w-container">
             <nav role="navigation" class="nav-menu w-nav-menu">
-                <div class="nav-link-wrapper"><a href="index.html" aria-current="page" class="nav-link w-nav-link w--current"
+                <div class="nav-link-wrapper"><a href="index.html" aria-current="page"
+                        class="nav-link w-nav-link w--current"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">Home</a><a
-                        href="index.html" aria-current="page" class="nav-link move-down hide-on-tab w-nav-link w--current"
+                        href="index.html" aria-current="page"
+                        class="nav-link move-down hide-on-tab w-nav-link w--current"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">Home</a>
                 </div>
-                <div class="nav-link-wrapper"><a href="" class="nav-link w-nav-link"
+                <div class="nav-link-wrapper"><a href="/about.html" class="nav-link w-nav-link"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">About</a><a
-                        href="" class="nav-link move-down hide-on-tab w-nav-link"
+                        href="/about.html" class="nav-link move-down hide-on-tab w-nav-link"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">About</a>
                 </div>
-                <div class="nav-link-wrapper"><a href="" class="nav-link w-nav-link"
+                <div class="nav-link-wrapper"><a href="/service.html" class="nav-link w-nav-link"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">services</a><a
-                        href="" class="nav-link move-down hide-on-tab w-nav-link"
+                        href="/service.html" class="nav-link move-down hide-on-tab w-nav-link"
                         style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; max-width: 940px;">services</a>
                 </div>
                 <!-- <div class="nav-link-wrapper"><a href="/blog" class="nav-link w-nav-link"
@@ -73,7 +75,7 @@
                     <p data-w-id="4e4e284a-37f6-9a2d-2fe7-4e431e805bab"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="max-width-30rem">Empowering businesses with cutting-edge website and mobile app
-                        development. Transform your ideas into reality with our expert team.</p><a href=""
+                        development. Transform your ideas into reality with our expert team.</p><a href="/contact.html"
                         data-w-id="5636032a-1271-e473-ecbe-20e393bd2447" class="button-with-circle-icon w-inline-block"
                         style="opacity: 1;">
                         <p class="button-text">Explore</p>
@@ -129,7 +131,7 @@
                         </div>
                         <h2>Website <span class="italics">Development.</span></h2>
                         <p class="max-width-30rem">We create responsive, high-speed, and SEO-friendly websites that
-                            ensure a seamless user experience and optimal performance.</p><a href=""
+                            ensure a seamless user experience and optimal performance.</p><a href="/service.html"
                             data-w-id="5636032a-1271-e473-ecbe-20e393bd2447"
                             class="button-with-circle-icon w-inline-block" style="opacity: 1;">
                             <p class="button-text">Explore</p>
@@ -163,7 +165,7 @@
                         </div>
                         <h2>Mobile App <span class="italics"> Development</span></h2>
                         <p class="max-width-30rem">Our team builds cross-platform and native mobile apps with
-                            cutting-edge technology to enhance user engagement and business growth.</p><a href=""
+                            cutting-edge technology to enhance user engagement and business growth.</p><a href="/service.html"
                             data-w-id="5636032a-1271-e473-ecbe-20e393bd2447"
                             class="button-with-circle-icon w-inline-block" style="opacity: 1;">
                             <p class="button-text">Explore</p>
@@ -910,7 +912,7 @@
             <div class="space-2rem"></div>
             <div data-w-id="fa36639f-bc34-8f1a-4024-d088998077f8" class="footer-top"
                 style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <div class="footer-block"><a href="" aria-current="page"
+                <div class="footer-block"><a href="/index.html" aria-current="page"
                         class="footer-logo-link-wrapper w-nav-brand w--current"><img width="Auto" height="Auto"
                             alt="Logo" src="images/logo1.png" loading="eager"
                             srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
@@ -945,12 +947,10 @@
                         <div class="footer-link-wrapper"><a href="index.html" aria-current="page"
                                 class="footer-link w--current">Home</a><a href="index.html" aria-current="page"
                                 class="footer-link move-down w--current">Home</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">About</a><a href=""
-                                class="footer-link move-down">About</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">Services</a><a href=""
+                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a
+                                href="/about.html" class="footer-link move-down">About</a></div>
+                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a href="/service.html"
                                 class="footer-link move-down">Services</a></div>
-                        <!-- <div class="footer-link-wrapper"><a href="/blog" class="footer-link">Blog</a><a href="/blog"
-                                class="footer-link move-down">Blog</a></div> -->
                     </div>
                     <div class="footer-wrapper">
                         <h5>Pages</h5>
