--- a/termsCondition.html
+++ b/termsCondition.html
@@ -9,7 +9,7 @@
 <body data-new-gr-c-s-check-loaded="14.1228.0" data-gr-ext-installed="">
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         data-w-id="06ab6c64-468c-b44e-1b8c-856deb96ba7f" role="banner" data-no-scroll="1" data-duration="400"
-        data-doc-height="1" style="opacity: 1;"><a href="/" class="logo-link-wrapper w-nav-brand" aria-label="home">
+        data-doc-height="1" style="opacity: 1;"><a href="/index.html" class="logo-link-wrapper w-nav-brand" aria-label="home">
             <img width="Auto" height="Auto" alt="Logo" src="images/logo1.png" loading="eager"
                 srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
                 sizes="(max-width: 991px) 124.921875px, 11vw" class="logo"></a>
@@ -18,11 +18,11 @@
                 <div class="nav-link-wrapper"><a href="index.html" class="nav-link w-nav-link"
                         style="max-width: 940px;">Home</a><a href="index.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Home</a></div>
-                <div class="nav-link-wrapper"><a href="" class="nav-link w-nav-link"
-                        style="max-width: 940px;">About</a><a href="" class="nav-link move-down hide-on-tab w-nav-link"
-                        style="max-width: 940px;">About</a></div>
-                <div class="nav-link-wrapper"><a href="" class="nav-link w-nav-link"
-                        style="max-width: 940px;">services</a><a href=""
+                <div class="nav-link-wrapper"><a href="/about.html" class="nav-link w-nav-link"
+                        style="max-width: 940px;">About</a><a href="/about.html"
+                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">About</a></div>
+                <div class="nav-link-wrapper"><a href="/service.html" class="nav-link w-nav-link"
+                        style="max-width: 940px;">services</a><a href="/service.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">services</a></div>
                 <!-- <div class="nav-link-wrapper"><a href="/blog" class="nav-link w-nav-link"
                                 style="max-width: 940px;">Blog</a><a href="/blog"
@@ -121,7 +121,7 @@
             <div class="space-2rem"></div>
             <div data-w-id="fa36639f-bc34-8f1a-4024-d088998077f8" class="footer-top"
                 style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <div class="footer-block"><a href="" aria-current="page"
+                <div class="footer-block"><a href="/index.html" aria-current="page"
                         class="footer-logo-link-wrapper w-nav-brand w--current"><img width="Auto" height="Auto"
                             alt="Logo" src="images/logo1.png" loading="eager"
                             srcset="images/logo1.png 500w, images/logo1.png 800w, images/logo1.png 1015w"
@@ -156,9 +156,9 @@
                         <div class="footer-link-wrapper"><a href="index.html" aria-current="page"
                                 class="footer-link w--current">Home</a><a href="index.html" aria-current="page"
                                 class="footer-link move-down w--current">Home</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">About</a><a href=""
-                                class="footer-link move-down">About</a></div>
-                        <div class="footer-link-wrapper"><a href="" class="footer-link">Services</a><a href=""
+                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a
+                                href="/about.html" class="footer-link move-down">About</a></div>
+                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a href="/service.html"
                                 class="footer-link move-down">Services</a></div>
                         <!-- <div class="footer-link-wrapper"><a href="/blog" class="footer-link">Blog</a><a href="/blog"
                                 class="footer-link move-down">Blog</a></div> -->
